--- a/templates/attendance/attendance_form.html
+++ b/templates/attendance/attendance_form.html
@@ -3,7 +3,8 @@
 
 <h1>退勤管理Form</h1>
 
-    <form>{% csrf_token %}
+    <form>
+        {% csrf_token %}
 <div>
     <p align="center">ログイン中：{{user}}さん</p>
     
@@ -14,7 +15,7 @@
         <p>本日の作業時間は{{delta_h}}時間{{delta_m}}分です．<br>お疲れ様でした．</p>
         
     {% endif %}
-    <button class = "bbutton" onclick="location.href='{% url 'Login' %}'">確認</button>
+    <button class = "bbutton" name="login" onclick="location.href='{% url 'Login' %}'">確認</button>
  
 </div>
     </form>
